...
            </objects>
            <point key="canvasLocation" x="940.57971014492762" y="756.69642857142856"/>
        </scene>
        <!--Details-->
        <scene sceneID="HQ1-a0-vsV">
            <objects>
                <viewController storyboardIdentifier="detailView" title="Details" id="Rqz-Zc-8LV" customClass="DetailViewController" customModule="MayTheForceBeWithHariel" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="xGU-30-nTC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okU-v4-Fgu">
                                <rect key="frame" x="20" y="114" width="50" height="21"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RDk-0R-GBf">
                                <rect key="frame" x="179.5" y="482" width="55" height="30"/>
                                <state key="normal" title="Favorite"/>
                                <connections>
                                    <action selector="didTapFavoriteButton:" destination="Rqz-Zc-8LV" eventType="touchUpInside" id="jGN-BR-pdQ"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
