...

    func didFavoritedPerson(success: Bool) {
        let message = success ? "Success" : "Failed"
        var alert = UIAlertController(
            title: "Favorite \(self.viewModel?.people.name ?? "")",
            message: message, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Ok", style: .default, handler: { (action) in
            self.dismiss(animated: true, completion: nil)
        }))

        self.present(alert, animated: true, completion: nil)
    }
}
...
